# agentium

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh.md  pyproject.toml  requirements-repro.txt
configs/: abac-policy.yaml  iam-oidc.dev.yaml  iam-oidc.prod.yaml  iam-oidc.staging.yaml  iam-oidc.yaml  runtime_plugins.default.yaml  runtime_policy.default.yaml
configs/ablation/: README.md  paper_scenarios.json
configs/budget/: default.yaml
configs/paper/: policy_full.yaml  policy_none.yaml  policy_weak.yaml
configs/policy/: default.yaml
configs/profiles/: research.yaml
docs/: REPRO.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: README.md  hitl-research.spec.ts  smoke.spec.ts
frontend/electron/: main.ts
frontend/electron/preload/: index.ts
frontend/scripts/: build-electron.mjs  reinstall-electron.mjs
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx
scripts/: ablation_microbench.py  reproduce_paper_eval.py  run_ablation_eval.py  run_paper_governance_profiles.py  run_release_gates.py
src/agentium/: __init__.py
src/agentium/ai_gateway/: __init__.py  content_safety.py  deepseek_chat.py  prompt_output_policy.py  router.py  token_rate_limit.py
src/agentium/api/: __init__.py  control_plane.py  http_control_plane.py  runtime_response.py
src/agentium/app/: __init__.py  bootstrap.py  identity_factory.py  logging_setup.py  plugin_runtime_factory.py  plugins_config.py  settings.py
src/agentium/background/: __init__.py  background_daemon.py  event_ingestor.py  memory_consolidator.py  notify_bridge.py  policy_guard.py  trigger_planner.py  triggers.py
src/agentium/channels/: __init__.py  base.py  email_adapter.py  null_adapter.py  outbound_orchestrator.py  web_adapter.py
src/agentium/cli/: main.py
src/agentium/coordination/: __init__.py  artifact_contract.py  artifact_store.py  budget_ledger.py  celery_chat_title_app.py  chat_agent_tool_loop.py  chat_deferred_jobs.py  chat_ingress_classification.py  chat_mid_semantic_memory.py  chat_session_title_job.py  chat_skill_prompt.py  chat_turn_service.py  emergence_guardrails.py  harness_handoff.py  harness_task_coordination.py  scheduled_job_runner.py  scheduled_job_schedule.py  task_graph.py  workflow_orchestrator.py
src/agentium/core/: __init__.py  agent_lifecycle.py  agent_runtime.py  cancel.py  control_loop.py  leases.py  run_cancellation.py  scheduler.py  state_observer.py
src/agentium/evaluation/: __init__.py  ablation_mode.py  adversarial_samples.py  adversarial_suite.py  env_fingerprint.py  eval_compare.py  eval_contamination_guard.py  eval_environment_fingerprint.py  eval_runner.py  leakage_filter.py  release_gates_runner.py
src/agentium/governance/: __init__.py  access_control.py  approval_gate.py  audit_lineage.py  domain_pack_loader.py  evolution_plugin.py  evolution_trajectory.py  policy_engine.py  policy_release.py  policy_release_manager.py  proposal_queue.py
src/agentium/integrations/: __init__.py  connector_registry.py
src/agentium/memory/: __init__.py  chat_memory_lane_router.py  factory.py  memory_service.py  types.py
src/agentium/models/: __init__.py  context.py  harness_contract.py  (+4 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_crash_recovery.py  test_credential_phishing_blocked.py  test_deepresearch.py  test_external_outreach.py  test_privilege_escalation_blocked.py
tests/helpers/: __init__.py  app_settings_test_baseline.py  chat_ingress_test_defaults.py
(+352 files in other folders)
